<resources>
	<string name="app_name">RideSharing</string>
	<string name="title_activity_main2">Main2Activity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	<string name="action_logout">Logout</string>
	<string name="location_ed">Choose your Location</string>
	<string name="from_date">Pickup Time</string>
	<string name="to_date">Dropoff Time</string>
	<string name="user_name">Username</string>
	<string name="pass_word">Password</string>
	<string name="login">Login</string>
	<string name="error_empty_usrname">Please enter username</string>
	<string name="error_empty_pswd">Please enter password</string>
	<string name="start_date">Start Date</string>
	<string name="end_date">End Date</string>
	<string name="confirm_date">Submit</string>
	<string name="show_cars">Show Cars</string>
	<string name="car_name">Car</string>
	<string name="book">Book</string>
	<string name="upcomg_trips">Upcoming Trips</string>
	<string name="past_trips">Past Trips</string>
	<string name="unlock">Unlock</string>
	<string name="title_activity_maps">Map</string>
	<string name="permission_rationale">Location permission is needed for core functionality</string>
	<string name="location_settings_inadequate_warning">The location settings on the device are not
		adequate to run this sample. Fix in Settings.</string>
	<string name="permission_denied_explanation">Permission was denied, but is needed for core
functionality.</string>
</resources>
