<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:padding="2dp"
        android:textColor="#000000"
        android:text="@string/start_date"
        android:gravity="center_horizontal"
        android:textSize="22sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <TextView
        android:id="@+id/time_tv"
        android:text="@string/end_date"
        android:textColor="#000000"
        android:padding="2dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_horizontal"
        android:textSize="22sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>
    <Button
        android:id="@+id/confirm"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/confirm_date"/>

</LinearLayout>