<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homeimg"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.HomePage"
    tools:showIn="@layout/app_bar_home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/location_la"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/location_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_ed"
            android:padding="8dp"
            android:textColor="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/from_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@drawable/shape_rectangle"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/from_date"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />


        <ImageView
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorPrimaryLight" />

        <Button
            android:id="@+id/to_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/shape_rectangle"
            android:drawableStart="@android:drawable/ic_menu_my_calendar"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:text="@string/to_date"
            android:textColor="#FFFFFF"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/show_cars_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="#30b903"
        android:textColor="#FFFFFF"
        android:text="@string/show_cars" />

    </LinearLayout>
</LinearLayout>